# serializer version: 1
# name: test_sensors[sensor.gw2000b_wificb44_leaf_battery_ch1_leaf_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leaf Battery CH1 Leaf Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leaf_battery_ch1_leaf_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leaf_battery_ch2_leaf_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leaf Battery CH2 Leaf Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leaf_battery_ch2_leaf_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '40%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leaf_battery_ch3_leaf_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leaf Battery CH3 Leaf Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leaf_battery_ch3_leaf_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leaf_battery_ch5_leaf_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leaf Battery CH5 Leaf Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leaf_battery_ch5_leaf_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leak_battery_ch1_leak_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leak Battery CH1 Leak Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leak_battery_ch1_leak_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '80%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leak_battery_ch2_leak_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leak Battery CH2 Leak Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leak_battery_ch2_leak_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leak_battery_ch3_leak_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leak Battery CH3 Leak Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leak_battery_ch3_leak_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_leak_battery_ch4_leak_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Leak Battery CH4 Leak Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_leak_battery_ch4_leak_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '60%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_absolute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Absolute',
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_absolute',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '302.07',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_day_wind_max-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Day Wind Max',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_day_wind_max',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_dew_point-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Dew Point',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_dew_point',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '16.2',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_feel_like-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Feel Like',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_feel_like',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.5',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_indoor_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Indoor Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_indoor_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_indoor_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Indoor Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_indoor_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13.5',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_outdoor_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Outdoor Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_outdoor_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '53',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_outdoor_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Outdoor Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_outdoor_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.5',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_day-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Day',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_day',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Event',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_event',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_month-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Month',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_month',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.47',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Rate',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_week-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Week',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_week',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.01',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_piezo_rain_year-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Piezo Rain Year',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_piezo_rain_year',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.47',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_day-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Day',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_day',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Event',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_event',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_month-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Month',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_month',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.47',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Rate',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_week-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Week',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_week',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.01',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_year-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Year',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_year',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.47',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_relative-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Relative',
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_relative',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '388.76',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_solar_irradiance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'illuminance',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Solar Irradiance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfIrradiance.WATTS_PER_SQUARE_METER: 'W/m²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_solar_irradiance',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6.87',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_uv_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'illuminance',
      'friendly_name': 'GW2000B-WIFICB44_Main Data UV-Index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'Index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_uv_index',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Direction',
      'icon': 'mdi:weather-windy',
      'unit_of_measurement': '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_direction',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Gust',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_gust',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Speed',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_speed',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leaf_ch1_leaf-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leaf CH1 Leaf',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leaf_ch1_leaf',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leaf_ch2_leaf-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leaf CH2 Leaf',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leaf_ch2_leaf',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leaf_ch3_leaf-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leaf CH3 Leaf',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leaf_ch3_leaf',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leaf_ch5_leaf-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leaf CH5 Leaf',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leaf_ch5_leaf',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leak_ch1_leak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leak CH1 Leak',
      'icon': 'mdi:water-alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leak_ch1_leak',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Normal',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leak_ch2_leak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leak CH2 Leak',
      'icon': 'mdi:water-alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leak_ch2_leak',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Normal',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leak_ch3_leak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leak CH3 Leak',
      'icon': 'mdi:water-alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leak_ch3_leak',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Normal',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_leak_ch4_leak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Leak CH4 Leak',
      'icon': 'mdi:water-alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_leak_ch4_leak',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Normal',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH PM25 CH1 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5_24h_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH PM25 CH1 PM2.5 24H AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5_24h_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '111',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH PM25 CH1 PM2.5 AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_pm25_ch1_pm2_5_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '89',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_soil_ch2_soil-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Soil CH2 Soil',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_soil_ch2_soil',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_soil_ch4_soil-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Soil CH4 Soil',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_soil_ch4_soil',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_soil_ch6_soil-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Soil CH6 Soil',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_soil_ch6_soil',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_soil_ch7_soil-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Soil CH7 Soil',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_soil_ch7_soil',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '13',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_soil_ch8_soil-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Soil CH8 Soil',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_soil_ch8_soil',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_ch2_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp CH2 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_ch2_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24.2',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_ch3_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp CH3 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_ch3_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.2',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_ch5_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp CH5 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_ch5_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '27.6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_ch6_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp CH6 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_ch6_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.3',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_ch7_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp CH7 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_ch7_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.8',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch1_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH1 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch1_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.4',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch2_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH2 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch2_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch3_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH3 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch3_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '51',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch3_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH3 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch3_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '27.5',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch4_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH4 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch4_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '44',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch4_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH4 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch4_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '29.2',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch5_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH5 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch5_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '51',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch5_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH5 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch5_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch6_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH6 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch6_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '51',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch6_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH6 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch6_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.8',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch7_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH7 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch7_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '58',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch7_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH7 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch7_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '26.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch8_t_h_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH8 T&H Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch8_t_h_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '48',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_multi_ch_temp_humi_ch8_t_h_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Multi_CH Temp&Humi CH8 T&H Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_multi_ch_temp_humi_ch8_t_h_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '27.3',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_pm25_battery_ch1_pm2_5_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_PM25 Battery CH1 PM2.5 Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_pm25_battery_ch1_pm2_5_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_soil_battery_ch2_soil_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Soil Battery CH2 Soil Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_soil_battery_ch2_soil_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_soil_battery_ch4_soil_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Soil Battery CH4 Soil Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_soil_battery_ch4_soil_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_soil_battery_ch6_soil_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Soil Battery CH6 Soil Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_soil_battery_ch6_soil_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_soil_battery_ch7_soil_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Soil Battery CH7 Soil Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_soil_battery_ch7_soil_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_soil_battery_ch8_soil_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Soil Battery CH8 Soil Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_soil_battery_ch8_soil_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_battery_ch2_temp_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp Battery CH2 Temp Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_battery_ch2_temp_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_battery_ch3_temp_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp Battery CH3 Temp Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_battery_ch3_temp_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_battery_ch5_temp_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp Battery CH5 Temp Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_battery_ch5_temp_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_battery_ch6_temp_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp Battery CH6 Temp Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_battery_ch6_temp_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_battery_ch7_temp_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp Battery CH7 Temp Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_battery_ch7_temp_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_humi_battery_ch4_t_h_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp&Humi Battery CH4 T&H Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_humi_battery_ch4_t_h_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_humi_battery_ch6_t_h_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp&Humi Battery CH6 T&H Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_humi_battery_ch6_t_h_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_humi_battery_ch7_t_h_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp&Humi Battery CH7 T&H Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_humi_battery_ch7_t_h_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_temp_humi_battery_ch8_t_h_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Temp&Humi Battery CH8 T&H Battery',
      'icon': 'mdi:battery',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_temp_humi_battery_ch8_t_h_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '20%',
  })
# ---
